--- a/templates/admin/adminModClient.html
+++ b/templates/admin/adminModClient.html
@@ -13,7 +13,7 @@
                         <a class="navbar-item has-text-info" href="{% url 'profiles_list' %}">Perfiles de jugadas</a>
                     </li>
                     <li class="is-active">
-                        <a class="navbar-item has-text-info" href="{% url 'all_clients' %}">Clientes</a>
+                        <a class="navbar-item has-text-info" href="{% url 'all_clients' %}">Usuarios</a>
                     </li>
                 </ul>
             </div>
