--- a/templates/admin/adminPrincipal.html
+++ b/templates/admin/adminPrincipal.html
@@ -12,7 +12,7 @@
 					<a class="navbar-item has-text-info" href="{% url 'profiles_list' %}">Perfiles de jugadas</a>
 			  	</li>
 			  	<li>
-				  <a class="navbar-item has-text-info" href="{% url 'all_clients' %}">Clientes</a>
+				  <a class="navbar-item has-text-info" href="{% url 'all_clients' %}">Usuarios</a>
 			  	</li>
 			</ul>
 		</div>
