--- a/templates/admin/movesProfileList.html
+++ b/templates/admin/movesProfileList.html
@@ -12,7 +12,7 @@
                     <a class="nav-link active" href="{% url 'profiles_list' %}">Perfiles</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="{% url 'all_clients' %}">Clientes</a>
+                    <a class="nav-link text-white" href="{% url 'all_clients' %}">Usuarios</a>
                 </li>
             </ul>
         </div>
